k8s/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: nibbler-deployment
  namespace: estartandodevs
  labels:
    app: nibbler
spec:
  selector:
    matchLabels:
      app: nibbler
  replicas: 1
  strategy:
    rollingUpdate:
      maxSurge: 2
      maxUnavailable: 0
    type: RollingUpdate
  template:
    metadata:
      labels:
        app: nibbler
    spec:
      containers:
        - name: nibbler
          image: conectedu.azurecr.io/api-nibbler:latest
          resources:
            requests:
              cpu: 256m
              memory: 512Mi
            limits:
              cpu: 1024m
              memory: 2048Mi
          ports:
            - containerPort: 5226
              name: nibbler
      imagePullSecrets:
        - name: conectedurepo
      restartPolicy: Always

---

apiVersion: v1
kind: Service
metadata:
  name: nibbler-service
  namespace: estartandodevs
spec:
  selector:
    app: nibbler
  type: ClusterIP
  sessionAffinityConfig:
    clientIP:
      timeoutSeconds: 10800
  ports:
    - name: nibbler
      protocol: TCP
      port: 80
      targetPort: 5226

---

apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: nibblerwebapi
  namespace: estartandodevs
  annotations:
    nginx.org/client-max-body-size: 64m
    nginx.ingress.kubernetes.io/proxy-body-size: 64m
    nginx.ingress.kubernetes.io/proxy-connect-timeout: "36000"
spec:
  rules:
    - host: nibbler.estartandodevs.com.br
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: nibbler-service
                port:
                  number: 80
